fix oidc login
